samples/_failures_safe/1761044709_40f11b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a7f9b9b.c: In function ‘main’:
./samples/SAFE/__tmp_2a7f9b9b.c:136:9: error: expected expression at end of input
  136 |         if (scanf("%zu %zu", &rows, &
      |         ^~
./samples/SAFE/__tmp_2a7f9b9b.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2a7f9b9b.c:136:9: error: expected declaration or statement at end of input
